--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <!--scope>provided</scope-->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
